--- a/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
+++ b/GameData/Knes/Compatibility/Waterfall/Knes_Waterfall.cfg
@@ -680,7 +680,7 @@
 
 
 
-@PART[_French_Hermes_OME_Engine]:FOR[Knes]
+@PART[_French_Hermes_OME_Engine]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -773,7 +773,7 @@
 
 
 
-@PART[_Knes_ATV_SM]:FOR[Knes]
+@PART[_Knes_ATV_SM]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -866,7 +866,7 @@
 
 
 
-@PART[Knes_Service_Module_Viking_09375]:FOR[Knes]
+@PART[Knes_Service_Module_Viking_09375]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -986,7 +986,7 @@
 
 
 
-@PART[_Knes_Utility_Adapter_09375_0625]:FOR[Knes]
+@PART[_Knes_Utility_Adapter_09375_0625]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1077,7 +1077,7 @@
 
 
 
-@PART[_Knes_MonoProp_Engine_1]:FOR[Knes]
+@PART[_Knes_MonoProp_Engine_1]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1171,7 +1171,7 @@
 
 
 
-@PART[_Knes_MonoProp_Engine_2]:FOR[Knes]
+@PART[_Knes_MonoProp_Engine_2]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1264,7 +1264,7 @@
 
 
 
-@PART[Knes_Hermes_Engine_Mk91]:FOR[Knes]
+@PART[Knes_Hermes_Engine_Mk91]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1357,7 +1357,7 @@
 
 
 
-@PART[Knes_MonoProp_Engine_srf]:FOR[Knes]
+@PART[Knes_MonoProp_Engine_srf]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1450,7 +1450,7 @@
 
 
 
-@PART[_Knes_Diamant_Engine_09375]:FOR[Knes]
+@PART[_Knes_Diamant_Engine_09375]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1572,7 +1572,7 @@
 
 
 
-@PART[_Knes_Vesta_Engine_0625]:FOR[Knes]
+@PART[_Knes_Vesta_Engine_0625]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1692,7 +1692,7 @@
 
 
 
-@PART[_Knes_Veronique_Engine_03125]:FOR[Knes]
+@PART[_Knes_Veronique_Engine_03125]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1801,7 +1801,7 @@
 
 
 
-@PART[_Knes_Catherine_Stage_1875]:FOR[Knes]
+@PART[_Knes_Catherine_Stage_1875]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -1908,7 +1908,7 @@
 
 
 
-@PART[_Knes_Cora_Engine_1]:FOR[Knes]
+@PART[_Knes_Cora_Engine_1]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -2017,7 +2017,7 @@
 
 
 
-@PART[_Knes_Cora_Engine_SL]:FOR[Knes]
+@PART[_Knes_Cora_Engine_SL]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -2135,7 +2135,7 @@
 
 
 
-@PART[_Knes_Diane_Engine_125]:FOR[Knes]
+@PART[_Knes_Diane_Engine_125]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -2255,7 +2255,7 @@
 
 
 
-@PART[_Knes_Mireille_Engine_09375]:FOR[Knes]
+@PART[_Knes_Mireille_Engine_09375]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
@@ -2981,7 +2981,7 @@
 
 
 
-@PART[_Knes_L3S_L33_Engine]:FOR[Knes]
+@PART[_Knes_L3S_L33_Engine]:NEEDS[Waterfall]:FOR[Knes]
 {
 
   !EFFECTS {}
