Part mass review

--- a/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
+++ b/GameData/Knes/Parts/Core/Antenna/_Knes_DirectAntenna_bread.cfg
@@ -31,7 +31,8 @@ PART
 	tags = Knes aerial antenna radio signal transmi srf
 	
 	mass = 0.0025
-
+	minimumRBMass = 0.0025
+	
 	heatConductivity = 0.04 // 1/3 default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...	
