--- a/GameData/Knes/Parts/Core/Decouplers/_Knes_Decoupler_G0625.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/_Knes_Decoupler_G0625.cfg
@@ -34,6 +34,7 @@ PART
 	description = The G0625 Stack Decoupler is a miniature detachment utility for small rockets and space probes.
 	attachRules = 1,1,1,1,0
 	mass = 0.01
+	minimumRBMass = 0.01	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
