--- a/GameData/Knes/Parts/Core/Decouplers/_Knes_Decoupler_G09375.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/_Knes_Decoupler_G09375.cfg
@@ -32,6 +32,7 @@ PART
 	description = The G09375 Stack Decoupler is equipped with a (hopefully) small explosive charge, that will sever the structural linkage between itself and whatever it's connected to. Painted on its sides are handy arrows indicating which side will detach.
 	attachRules = 1,1,1,1,0
 	mass = 0.022
+	minimumRBMass = 0.022	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
