--- a/GameData/Knes/Parts/Core/Decouplers/_Knes_Decoupler_Radial_Small.cfg
+++ b/GameData/Knes/Parts/Core/Decouplers/_Knes_Decoupler_Radial_Small.cfg
@@ -28,6 +28,7 @@ PART
 	description = The KEREB-H "Weak" Radial Decoupler, like most other decouplers, is equipped with a (hopefully) small explosive charge, that will sever the structural linkage between itself and whatever it's connected to.
 	attachRules = 0,1,0,1,0
 	mass = 0.005
+	minimumRBMass = 0.005	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
