--- a/GameData/Knes/Parts/Core/Sat/_Knes_Flat_SolarPanel_NanoSat.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Flat_SolarPanel_NanoSat.cfg
@@ -28,6 +28,7 @@ PART
 	manufacturer = Knes
 	description = K2 "Shramp" is Knes's latest development in SolarPanel miniaturization. A pretty good job.
 	mass = 0.0015
+	minimumRBMass = 0.0015	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.15
