--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_NanoSat.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_NanoSat.cfg
@@ -33,6 +33,7 @@ PART
 	description = K2 "Kassler" is Knes's latest development in probe miniaturization. A pretty rushed job.
 	attachRules = 1,1,1,1,1
 	mass = 0.005
+	minimumRBMass = 0.005	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.15
