--- a/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_Pushotron.cfg
+++ b/GameData/Knes/Parts/Launcher/Ariane5/_Knes_Booster_Pushotron.cfg
@@ -31,6 +31,7 @@ PART
 	description = A small canister filled with what appears to be solid rocket fuel. Although not much of a step forward in terms of raw power, Kerbal Scientists have slowly warmed up to the Pushotron I's many uses, such as pushing things away.
 	attachRules = 0,1,0,1,1
 	mass = 0.02
+	minimumRBMass = 0.02
 	heatConductivity = 0.04 // 1/3 default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...	
