--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_FuelTank_nano_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant2_FuelTank_nano_0625.cfg
@@ -30,6 +30,7 @@ PART
 	description = The KEREB-D "Nano" Fuel Tank from Knes is a compact fuel container for small space probes, or a backup tank for other small spacecraft. Do not wash in cold water, or feed after midnight.
 	attachRules = 1,1,1,1,0
 	mass = 0.0188
+	minimumRBMass = 0.0188	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.15
