--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron.cfg
@@ -32,7 +32,7 @@ PART
 	tags = Diamant Knes fin Diomede
 	
 	mass = 0.02
-	
+	minimumRBMass = 0.02	
 	thermalMassModifier = 8.0
 	// heatConductivity = 0.06 // half default
 	emissiveConstant = 0.95
