--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Aileron_B.cfg
@@ -32,7 +32,7 @@ PART
 	tags = Diamant Knes fin engine Diomede
 	
 	mass = 0.025
-	
+	minimumRBMass = 0.025	
 	thermalMassModifier = 8.0
 	// heatConductivity = 0.06 // half default
 	emissiveConstant = 0.95
