--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Decoupler_0625.cfg
@@ -40,7 +40,8 @@ PART
 	tags = Knes Decoupler Diamant 0.625 Diomede
 
 	mass = 0.015
-
+	minimumRBMass = 0.015
+	
 	dragModelType  = default
 	maximum_drag   = 0.10
 	minimum_drag   = 0.05
