--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_Diamant_Fairing_0625.cfg
@@ -37,7 +37,7 @@ PART
 	tags = Knes Diamant Fairing 0.625 Diomede
 
 	mass = 0.025
-
+	minimumRBMass = 0.025
 	dragModelType = default
 	maximum_drag = 0.20
 	minimum_drag = 0.15
