--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_roll.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_roll.cfg
@@ -32,6 +32,8 @@ PART
 	tags = Diamant Knes rcs engine Diomede
 	
 	mass = 0.008
+	minimumRBMass = 0.008
+	
 	breakingForce = 200
 	breakingTorque = 200		
 	thermalMassModifier = 8.0
