--- a/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
+++ b/GameData/Knes/Parts/Launcher/Diamant/_Knes_RCS_Bump_tank.cfg
@@ -32,6 +32,7 @@ PART
 	tags = Diamant Knes monoprop engine Diomede fuel tank
 	
 	mass = 0.005
+	minimumRBMass = 0.005	
 	breakingForce = 200
 	breakingTorque = 200		
 	thermalMassModifier = 8.0
