--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Fin.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Fin.cfg
@@ -32,6 +32,7 @@ PART
 	tags = Ariane Knes fin aileron L3S
 	
 	mass = 0.02
+	minimumRBMass = 0.02	
 	breakingForce = 200
 	breakingTorque = 200		
 	thermalMassModifier = 8.0
