--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Decoupler_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Decoupler_03125.cfg
@@ -40,7 +40,7 @@ PART
 	tags = Knes Decoupler Veronique Vesta Varinka Diamant Diomede 0.3125
 
 	mass = 0.001
-
+	minimumRBMass = 0.001
 	dragModelType  = default
 	maximum_drag   = 0.10
 	minimum_drag   = 0.05
