--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Engine_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Engine_03125.cfg
@@ -34,7 +34,9 @@ PART
 	description = This little engine is for the Varinka Rocket.
 	tags = Veronique Knes Varinka 0.3125 engine
 
-    mass = 0.015
+    mass = 0.012
+	minimumRBMass = 0.012
+	
 	breakingForce = 20
 	breakingTorque = 20	
 	dragModelType = default
