--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_FuelTank_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_FuelTank_03125.cfg
@@ -35,6 +35,7 @@ PART
 	tags = Knes Fuel Veronique Varinka 0.3125
 
 	mass = 0.022
+	minimumRBMass = 0.022	
 	breakingForce = 20
 	breakingTorque = 20	
 	dragModelType = default
