--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Adapter_0625to03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Adapter_0625to03125.cfg
@@ -36,6 +36,8 @@ PART
 	tags = Vesta Viska Knes
 
     mass = 0.02
+	minimumRBMass = 0.02
+	
 	breakingForce = 200
 	breakingTorque = 200	
     stageOffset = 1
