--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Aileron.cfg
@@ -32,6 +32,8 @@ PART
 	tags = Vesta Viska Knes
 	
 	mass = 0.001
+	minimumRBMass = 0.001
+	
 	breakingForce = 200
 	breakingTorque = 200		
 	thermalMassModifier = 8.0
