--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_AirBrake.cfg
@@ -28,6 +28,7 @@ PART
 	description = Research into feasible ways to slow down a plane in mid-air showed that loose hull panels are pretty great as drag-inducing deceleration devices.
 	attachRules = 0,1,0,0,1
 	mass = 0.001
+	minimumRBMass = 0.001	
 	breakingForce = 200
 	breakingTorque = 200		
 	thermalMassModifier = 5.0 // a hair worse than airliner parts
