--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Avionic_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Avionic_03125.cfg
@@ -33,7 +33,8 @@ PART
 	description  = A small probe for a small rocket.
 	tags = Vesta Viska Veronique Varinka Knes
 
-	mass = 0.04
+	mass = 0.025
+	minimumRBMass = 0.025	
 	breakingForce = 200
 	breakingTorque = 200	
 	dragModelType  = default
