--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_CatPod_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_CatPod_03125.cfg
@@ -35,7 +35,8 @@ PART
 	description = It's called a feline transportation unit.
 	tags = Vesta Viska Veronique Varinka Knes
 	
-	mass = 0.04
+	mass = 0.025
+	minimumRBMass = 0.025	
 	breakingForce = 200
 	breakingTorque = 200		
 	dragModelType = default
