--- a/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
+++ b/GameData/Knes/Parts/Launcher/Vesta/_Knes_Vesta_Parachute_03125.cfg
@@ -39,6 +39,8 @@ PART
 	tags = Vesta Viska Veronique Varinka Knes
 	
 	mass = 0.004
+	minimumRBMass = 0.004
+	
 	breakingForce = 200
 	breakingTorque = 200		
 	bodyLiftMultiplier = 0	
