--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Skid.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Skid.cfg
@@ -27,6 +27,7 @@ PART
 	description = High performance retractable landing skid. If we didn't tell you, you'd never know that most of those components were salvaged from scrapped machinery... oh.
 	attachRules = 0,1,0,0,1
 	mass = 0.005
+	minimumRBMass = 0.005	
 	thermalMassModifier = 4.0 
 	// heatConductivity = 0.06
 	emissiveConstant = 0.95
