--- a/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_Engine_srf.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_Engine_srf.cfg
@@ -28,6 +28,7 @@ PART
 	description = This Engine responds to main throttle controls, but it consumes MonoPropellant instead of a Fuel+Oxidizer mix.
 	attachRules = 0,1,0,1,1
 	mass = 0.02
+	minimumRBMass = 0.02	
 	heatConductivity = 0.04 // 1/3 default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...	
