--- a/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_FuelTank_Nano_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_FuelTank_Nano_09375.cfg
@@ -31,7 +31,7 @@ PART
 	description = The CL-R10 is a miniature RCS tank for small probes and low volume monopropellant storage.
 	attachRules = 1,1,1,1,0
 	mass = 0.0082
-	
+	minimumRBMass = 0.0082
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
