--- a/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Structural_EndCap_0625.cfg
@@ -28,6 +28,7 @@ PART
 	description = A 0.625 EndCap for your spacecraft or station.
 	attachRules = 1,1,1,1,0
 	mass = 0.001
+	minimumRBMass = 0.001	
 	breakingForce = 200
 	breakingTorque = 200		
 	dragModelType = default
