--- a/GameData/Knes/Parts/ATV/_Knes_ATV_Antenna.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_Antenna.cfg
@@ -31,6 +31,7 @@ PART
 	tags = Knes aerial antenna radio signal transmi srf ATV
 	
 	mass = 0.01
+	minimumRBMass = 0.01	
 
 	heatConductivity = 0.04 // 1/3 default
 	skinInternalConductionMult = 4.0
