--- a/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_A.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_ATV_RCS_A.cfg
@@ -26,6 +26,7 @@ PART
 	description = The recent discovery of a third law of physics made it possible for Snekma Corps engineers to produce these small monopropellant thrusters, to help with attitude control and linear motion. Even though many Kerbal physicists still dispute the validity of this new law, studies show that the thrusters seem to work as advertised.
 	attachRules = 0,1,0,0,0
 	mass = 0.02
+	minimumRBMass = 0.02	
 	dragModelType = default
 	maximum_drag = 0.001
 	minimum_drag = 0.001
