--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
@@ -31,6 +31,7 @@ PART
 	description = A1 "Zebulon" is Knes's latest development in probe miniaturization. A pretty rushed job.
 	attachRules = 1,0,1,1,0
 	mass = 0.015
+	minimumRBMass = 0.015	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.15
