--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Separatron.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_L3S_Separatron.cfg
@@ -32,6 +32,7 @@ PART
 	breakingForce = 200
 	breakingTorque = 200		
 	mass = 0.02
+	minimumRBMass = 0.02	
 	heatConductivity = 0.04 // 1/3 default
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.5 // yes, it's white. But let's claim it's an emissive white...	
