--- a/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
+++ b/GameData/Knes/Parts/Launcher/Veronique/_Knes_Veronique_Aileron.cfg
@@ -32,6 +32,7 @@ PART
 	tags = Veronique Knes Varinka fin
 	
 	mass = 0.001
+	minimumRBMass = 0.001	
 	breakingForce = 20
 	breakingTorque = 20		
 	thermalMassModifier = 8.0
