--- a/GameData/Knes/Parts/Spacecraft/_Knes_DockingPortJr_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_DockingPortJr_0625.cfg
@@ -30,6 +30,7 @@ PART
 	description = #autoLOC_500853 //#autoLOC_500853 = Originally marketed as a child-size version of the normal Clamp-O-Tron, the Clamp-O-Tron Jr. soon found use among hobbyists and professional space agencies alike for its compact profile, lightweight structure, and all-round cuteness. As a result of its small size, kerbals need to hold their breath and wiggle to slip through.
 	attachRules = 1,1,1,1,0
 	mass = 0.02
+	minimumRBMass = 0.02	
 	breakingForce = 200
 	breakingTorque = 200		
 	dragModelType = default
