--- a/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_FuelTank_Medium_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_MonoProp_FuelTank_Medium_09375.cfg
@@ -31,6 +31,7 @@ PART
 	description = The CL-R15 is a RCS tank for small probes and low volume monopropellant storage.
 	attachRules = 1,1,1,1,0
 	mass = 0.025
+	minimumRBMass = 0.025	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
