--- a/GameData/Knes/Parts/Spacecraft/_Knes_Structural_Adapter_09375_0625.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Structural_Adapter_09375_0625.cfg
@@ -29,6 +29,7 @@ PART
 	description = A small parts adapter for space probes and payload.
 	attachRules = 1,0,1,1,0
 	mass = 0.02
+	minimumRBMass = 0.02	
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
