Add Fairing Variant

--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_125.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_125.cfg
@@ -61,9 +61,12 @@ PART
 		nArcs = 2
 		nCollidersPerXSection = 9
 		TextureURL = Knes/Parts/Core/Fairings/fairings_diff
-		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap	
+		CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap
+		TextureNormalURL = Squad/Parts/Aero/fairings/fairings_normals		
 		DefaultBaseTextureURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base
-		DefaultBaseNormalsURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base_BumpMap		
+		DefaultBaseNormalsURL = Knes/Parts/Core/Fairings/Knes_Fairing_Base_BumpMap	
+		BaseModelTransformName = Mesh
+		
 		panelGrouping = 3
 		pivot = 0,0.05,0
 		axis = 0,1,0
@@ -99,5 +102,56 @@ PART
 		// nodeOuterAftID = bottom
 		// nodeInnerAftID = top
 	}
-			
+	MODULE
+	{
+		name = ModulePartVariants
+		useMultipleDragCubes = false		
+		baseVariant = White
+		VARIANT
+		{
+			name = White
+			displayName = #autoLOC_8007119
+			themeName = White
+			description = #autoLOC_8003040
+			primaryColor = #ffffff
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				materialName=FairingsMat
+				mainTextureURL = Knes/Parts/Core/Fairings/fairings_diff
+			}
+			EXTRA_INFO
+			{
+				FairingsTextureURL=Knes/Parts/Core/Fairings/fairings_diff
+				FairingsNormalURL=Knes/Parts/Core/Fairings/fairings_normals
+				CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap			
+				BaseMaterialName=Knes_Fairing_Base
+				BaseTextureName=Knes/Parts/Core/Fairings/Knes_Fairing_Base
+				BaseNormalsName=Knes/Parts/Core/Fairings/Knes_Fairing_Base_BumpMap
+			}
+		}
+		VARIANT
+		{
+			name = Dark
+			displayName = #autoLOC_8007117
+			themeName = Dark			
+			description = #autoLOC_8003043
+			primaryColor = #000000
+			secondaryColor = #000000
+			TEXTURE
+			{
+				materialName=FairingsMat
+				mainTextureURL = Knes/Parts/Core/Fairings/black_fairings_diff
+			}
+			EXTRA_INFO
+			{
+				FairingsTextureURL=Knes/Parts/Core/Fairings/black_fairings_diff
+				FairingsNormalURL=Knes/Parts/Core/Fairings/fairings_normals
+				CapTextureURL = Knes/Parts/Core/Fairings/fairingsCap				
+				BaseMaterialName=Knes_Fairing_Base
+				BaseTextureName=Knes/Parts/Core/Fairings/Knes_Fairing_Base_Black
+				BaseNormalsName=Knes/Parts/Core/Fairings/Knes_Fairing_Base_BumpMap
+			}
+		}
+	}	
 }
