--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_AileronL.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_AileronL.cfg
@@ -4,12 +4,12 @@
 
 PART
 {
-	name = Knes_Hermes_AileronL
+	name = Knes_Hermes_AileronR
 	module = Part
 	author = Nookos / Well
 	MODEL
 	{
-		model = Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes_AileronL
+		model = Knes/Parts/SpacePlane/EuropeanHermes/Knes_Hermes_AileronR
 	}
 	scale = 1
 	rescaleFactor = 1
@@ -20,7 +20,7 @@ PART
 	cost = 850
 	category = Aero
 	subcategory = 0
-	title = Hermes Aileron L
+	title = Hermes Aileron Left
 	manufacturer = Knes
 	description = Aileron for Hermes Space Shuttle
 	attachRules = 1,1,0,1,0
@@ -52,7 +52,7 @@ PART
 		ctrlSurfaceRange = 20
 		ctrlSurfaceArea = 1
 		actuatorSpeed = 25
-		transformName = Hermes_AileronL_Parent
+		transformName = Hermes_AileronR_Parent
 	}
 	MODULE
 	{
