--- a/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_RudderR.cfg
+++ b/GameData/Knes/Parts/SpacePlane/EuropeanHermes/_Knes_Hermes_RudderR.cfg
@@ -20,7 +20,7 @@ PART
 	cost = 850
 	category = Aero
 	subcategory = 0
-	title = Hermes Rudder R
+	title = Hermes Rudder Right
 	manufacturer = Knes
 	description = Rudder for Hermes Space Shuttle
 	attachRules = 1,1,0,1,0
