MRK antenna to relay

--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Antenna.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Antenna.cfg
@@ -52,20 +52,20 @@ PART
 		extendpanelsActionName = #autoLOC_6002400 //#autoLOC_6002400 = Toggle <<1>>
 	}
 
-	
 	MODULE
 	{
 		name = ModuleDataTransmitter
-		antennaType = DIRECT
-		packetInterval = 0.6
+		antennaType = RELAY
+		packetInterval = 0.35
 		packetSize = 2
-		packetResourceCost = 12.0
+		packetResourceCost = 14.0
 		requiredResource = ElectricCharge
 		DeployFxModules = 0
-		antennaPower = 5000000
+		antennaPower = 85000000
 		antennaCombinable = True
-		antennaCombinableExponent = 1
-	}
+		antennaCombinableExponent = 0.75
+	}	
+
 	MODULE
 	{
 		name = ModuleCargoPart
