--- a/GameData/Knes/Parts/Spacecraft/_Knes_Service_Module_Viking_09375.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Service_Module_Viking_09375.cfg
@@ -25,7 +25,7 @@ PART
         
     attachRules = 1,1,1,1,0
 
-	TechRequired = advFlightControl
+	TechRequired = generalConstruction
     entryCost = 1800
     cost = 800
 
