add Science storage

--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Crew_Module.cfg
@@ -116,5 +116,16 @@ PART
 		name = ModuleInventoryPart		
 		InventorySlots = 9
 		packedVolumeLimit = 1850
-	}		
+	}	
+	MODULE
+	{
+		name = ModuleScienceContainer
+		
+		reviewActionName = #autoLOC_502201 //#autoLOC_502201 = Review Stored Data
+		storeActionName = #autoLOC_502202 //#autoLOC_502202 = Store Experiments
+		evaOnlyStorage = True // i.e. can nearby regular vessels also do this, or EVA only
+		storageRange = 3
+		canBeTransferredToInVessel = True
+		canTransferInVessel = True
+	}	
 }
