Srf FX for monoprop engine

--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_MonoProp_Engine_2.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_MonoProp_Engine_2.cfg
@@ -71,6 +71,16 @@ PART
 			key = 6 0.001
 		}
 	}	
+
+	MODULE
+	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.4
+		maxDistance = 10
+		falloff = 2
+		thrustTransformName = thrustTransform
+	}	
 	
 	RESOURCE
 	{
