--- a/GameData/Knes/Parts/Launcher/L3S/_Knes_MonoProp_Engine_1.cfg
+++ b/GameData/Knes/Parts/Launcher/L3S/_Knes_MonoProp_Engine_1.cfg
@@ -72,6 +72,16 @@ PART
 		}
 	}	
 	
+	MODULE
+	{
+		name = ModuleSurfaceFX
+		thrustProviderModuleIndex = 0
+		fxMax = 0.4
+		maxDistance = 10
+		falloff = 2
+		thrustTransformName = thrustTransform
+	}	
+	
 	RESOURCE
 	{
 		name = MonoPropellant
