Fix fairing endcap

--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_250.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_250.cfg
@@ -72,12 +72,15 @@ PART
 		
 		baseRadius = 1.25
 		maxRadius = 3
-		capRadius = 0.2
-		snapThreshold = 0.25
-		
+		capRadius = 0.375
+		snapThreshold = 0.015
+		snapThresholdFineAdjust = 0.015		
 		xSectionHeightMin = 0.3
 		xSectionHeightMax = 3
-		
+		xSectionHeightMinFineAdjust = 0.06
+		xSectionHeightMaxFineAdjust = 6
+		aberrantNormalLimit = 21
+		minHeightRadiusRatio = 0.1		
 		edgeSlide = 0.15
 		edgeWarp = 0.03
 		noseTip = 0.5
