--- a/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_375.cfg
+++ b/GameData/Knes/Parts/Core/Fairings/_Knes_Aero_Fairing_375.cfg
@@ -74,17 +74,20 @@ PART
 		
 		baseRadius = 1.875
 		maxRadius = 6
-		capRadius = 0.2
+		capRadius = 0.375
 		snapThreshold = 0.25
-		
+		snapThresholdFineAdjust = 0.02			
 		xSectionHeightMin = 0.3
 		xSectionHeightMax = 4
-		
+		xSectionHeightMinFineAdjust = 0.09
+		xSectionHeightMaxFineAdjust = 8		
+		aberrantNormalLimit = 12
+		minHeightRadiusRatio = 0.11		
 		edgeSlide = 0.15
-		edgeWarp = 0.04
+		edgeWarp = 0.02
 		noseTip = 0.5
 		
-		UnitAreaMass = 0.012
+		UnitAreaMass = 0.016
 		UnitAreaCost = 12
 		
 		stagingToggleEnabledEditor = True
