Upscale Crystals growing rate

--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_CrystalLab.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_CrystalLab.cfg
@@ -36,7 +36,7 @@ PART
 	cost = 504000
 	category = Science
 	subcategory = 0
-	title = STEAM "Laputa" ScienceLab Module
+	title = STEAM "Laputa" Crystallisation Facility Module
 	manufacturer = Knes
 	description = The "Laputa" module is equiped with multi-user instrument for the fundamental study of the processes of nucleation and crystallisation of biological macro-molecules, and specifically, how these processes are influenced by gravity.
 	attachRules = 1,0,1,1,0
@@ -83,7 +83,7 @@ PART
 		 OUTPUT_RESOURCE
 		 {
 			ResourceName = Crystal
-			Ratio = 0.0002
+			Ratio = 0.0015
 			DumpExcess = false
 			FlowMode = STAGE_PRIORITY_FLOW
 		 }
