--- a/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_CrystalFactory.cfg
+++ b/GameData/Knes/Parts/Spacecraft/_Knes_Station_Module_CrystalFactory.cfg
@@ -24,7 +24,7 @@ PART
 	subcategory = 0
 	title = Crystallisation Facility Module "Eternity"
 	manufacturer = Knes
-	description = The "Eternity" module is equiped with multi-user instrument for the fundamental study of the processes of nucleation and crystallisation of biological macro-molecules, and specifically, how these processes are influenced by gravity. This Module produces 50 protein crystal in ~23 days.
+	description = The "Eternity" module is equiped with multi-user instrument for the fundamental study of the processes of nucleation and crystallisation of biological macro-molecules, and specifically, how these processes are influenced by gravity.
 	attachRules = 1,0,1,1,0
 	mass = 1.5
 	breakingForce = 200
@@ -104,7 +104,7 @@ PART
 		 OUTPUT_RESOURCE
 		 {
 			ResourceName = Crystal
-			Ratio = 0.0001
+			Ratio = 0.001
 			DumpExcess = false
 			FlowMode = STAGE_PRIORITY_FLOW
 		 }
