--- a/GameData/Knes/Parts/ATV/_Knes_STEAM_CrystalLab.cfg
+++ b/GameData/Knes/Parts/ATV/_Knes_STEAM_CrystalLab.cfg
@@ -33,8 +33,8 @@ PART
 		
 	TechRequired = advExploration
 	entryCost = 10400
-	cost = 504000
-	category = Science
+	cost = 404000
+	category = Utility
 	subcategory = 0
 	title = STEAM "Laputa" Crystallisation Facility Module
 	manufacturer = Knes
@@ -83,7 +83,7 @@ PART
 		 OUTPUT_RESOURCE
 		 {
 			ResourceName = Crystal
-			Ratio = 0.0015
+			Ratio = 0.0025
 			DumpExcess = false
 			FlowMode = STAGE_PRIORITY_FLOW
 		 }
