--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
@@ -91,6 +91,19 @@
 				mainTextureURL = Knes/Parts/SpacePlane/FrenchHermes/French_Hermes_Core_Black
 			}				
 		}
+		VARIANT
+		{
+			name = LKS
+			displayName = LKS
+			themeName = LKS
+			primaryColor = #ffffff
+			secondaryColor = #674033
+			TEXTURE
+			{
+				materialName = French_Hermes_Core
+				mainTextureURL = Knes/Parts/SpacePlane/FrenchHermes/French_Hermes_Core_LKS
+			}				
+		}		
 	}
 	MODULE
 	{
