--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
@@ -160,7 +160,47 @@
 				Wings1_white = true
 				Wings2_white = true		
 			}
+		}	
+		VARIANT
+		{
+			name = LKS_BlackAndWhite
+			displayName = LKS_BlackAndWhite
+			themeName = LKS_BlackAndWhite
+			primaryColor = #674033
+			secondaryColor = #ffffff
+			TEXTURE
+			{
+				materialName = French_Hermes_Core
+				mainTextureURL = Knes/Parts/SpacePlane/FrenchHermes/French_Hermes_Core_LKS
+			}			
+			GAMEOBJECTS
+			{
+				Wings1_black = true
+				Wings2_black = false
+				Wings1_white = false
+				Wings2_white = true		
+			}
 		}		
+		VARIANT
+		{
+			name = LKS_Dark
+			displayName = LKS_WhiteAndBlack
+			themeName = LKS_Dark
+			primaryColor = #ffffff
+			secondaryColor = #674033
+			TEXTURE
+			{
+				materialName = French_Hermes_Core
+				mainTextureURL = Knes/Parts/SpacePlane/FrenchHermes/French_Hermes_Core_LKS
+			}				
+			GAMEOBJECTS
+			{
+				Wings1_black = false
+				Wings2_black = true
+				Wings1_white = true
+				Wings2_white = false		
+			}
+		}			
 	}	
 	MODULE
 	{
