--- a/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
+++ b/GameData/Knes/Parts/Core/Sat/_Knes_Sat_Asterix.cfg
@@ -129,6 +129,25 @@ PART
 		antennaCombinable = True
 		antennaCombinableExponent = 1
 	}
+	
+	MODULE
+	{
+		name = ModuleScienceExperiment
+		experimentID = Telemetry
+		experimentActionName = Log Telemetry
+		resetActionName = Delete Data
+		useStaging = False
+		useActionGroups = True
+		hideUIwhenUnavailable = False
+		xmitDataScalar = 0.5
+		dataIsCollectable = True
+		collectActionName = Take Data
+		interactionRange = 1.5
+		rerunnable = True
+		usageReqMaskInternal = 1
+		usageReqMaskExternal = 8
+	}
+	
 	MODULE
 	{
 		name = ModuleCargoPart
