--- a/GameData/Knes/Localization/MRK_en-us.cfg
+++ b/GameData/Knes/Localization/MRK_en-us.cfg
@@ -60,6 +60,8 @@ Localization
 				
 				#autoLOC_MRK_171 = MRK-5a Antenna
 				#autoLOC_MRK_172 = This deployable antenna is designed to fold away into the the MRK Service Module prior to flight. I guess it could be used elsewhere?
+				#autoLOC_MRK_173 = MRK-5b Antenna
+				#autoLOC_MRK_174 = A nice little Relay Antenna.
 		 
 				// --- Service Module Thruster ---
 				#autoLOC_MRK_181 = MRK-6f Thruster
