--- a/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Thruster.cfg
+++ b/GameData/Knes/Parts/MultiRoleKapsule/_Knes_mrk_Thruster.cfg
@@ -17,7 +17,7 @@ PART
 	TechRequired = advFlightControl
 	entryCost = 3000
 	cost = 400
-	category = Control
+	category = Engine
 	subcategory = 0
 	title = #autoLOC_MRK_181
 	manufacturer = Knes
@@ -38,7 +38,7 @@ PART
 	
 	EFFECTS
 	{
-		running
+		rcs
 		{
 			AUDIO_MULTI_POOL
 			{
@@ -64,7 +64,60 @@ PART
 				speed = 1.0 1.0
 				localRotation = -90, 0, 0
 			}
-		}		
+		}	
+		running
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 1.0 0.3
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = thrustTransform
+				emission = 0.0 0.0
+				emission = 0.4 0.005
+				emission = 1.0 0.1
+				speed = 0.0 0.4
+				speed = 1.0 0.6
+				//localOffset = 0, 0, 1
+				localPosition = 0, 0, 0
+			}
+		}
+		engage
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_vent_soft
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}
+		flameout
+		{
+			PREFAB_PARTICLE
+			{
+				prefabName = fx_exhaustSparks_flameout_2
+				transformName = thrustTransform
+				oneShot = true
+			}
+			AUDIO
+			{
+				channel = Ship
+				clip = sound_explosion_low
+				volume = 1.0
+				pitch = 2.0
+				loop = false
+			}
+		}			
 	}
 	
 	MODULE
@@ -75,17 +128,43 @@ PART
 		thrusterPower = 4
 		resourceName = MonoPropellant
 		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = running
+		runningEffectName = rcs
 		atmosphereCurve
 		{
-			key = 0 240
+			key = 0 280
 			key = 1 100
 			key = 4 0.001
 		}
 	}
 	MODULE
 	{
+		name = ModuleEnginesFX
+		thrustVectorTransformName = thrustTransform
+		exhaustDamage = False
+		ignitionThreshold = 0.1
+		minThrust = 0
+		maxThrust = 12
+		heatProduction = 2
+		fxOffset = 0, 0, 0.3
+		EngineType = MonoProp
+		exhaustDamageDistanceOffset = 0.25
+		runningEffectName = running
+		PROPELLANT
+		{
+			name = MonoPropellant
+			ratio = 0.9
+			DrawGauge = True
+		}
+		atmosphereCurve
+		{
+			key = 0 280
+			key = 1 80
+			key = 4 0.001
+		}
+	}	
+	MODULE
+	{
 		name = ModuleCargoPart
-		packedVolume = 5
+		packedVolume = 10
 	}		
 }
