Fix LKS theme name

--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Rudder.cfg
@@ -95,7 +95,7 @@
 		{
 			name = LKS
 			displayName = LKS
-			themeName = LKS
+			themeName = Bare
 			primaryColor = #ffffff
 			secondaryColor = #674033
 			TEXTURE
