--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Wings.cfg
@@ -165,7 +165,7 @@
 		{
 			name = LKS_BlackAndWhite
 			displayName = LKS_BlackAndWhite
-			themeName = LKS_BlackAndWhite
+			themeName = Bare
 			primaryColor = #674033
 			secondaryColor = #ffffff
 			TEXTURE
@@ -185,7 +185,7 @@
 		{
 			name = LKS_Dark
 			displayName = LKS_WhiteAndBlack
-			themeName = LKS_Dark
+			themeName = Bare
 			primaryColor = #ffffff
 			secondaryColor = #674033
 			TEXTURE
