--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes.cfg
@@ -355,7 +355,7 @@
 		{
 			name = LKS
 			displayName = LKS
-			themeName = LKS
+			themeName = Bare
 			primaryColor = #ffffff
 			secondaryColor = #674033
 			TEXTURE
