--- a/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarWatcher/_Knes_Pod_StarWatcher.cfg
@@ -24,6 +24,9 @@ PART
 // definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
 	node_stack_bottom = 0.0, -1.31824, 0.0, 0.0, -1.0, 0.0, 1
 	node_stack_top = 0.0, 2.4, 0.0, 0.0, 1.0, 0.0, 1	
+	node_stack_gear1 = 0.0, 0.98, 0.65, 0.0, 0.17, 1.0, 0	
+	node_stack_gear2 = 0.5, -0.7, 0.65, 0.1, 0.0, 1.0, 0	
+	node_stack_gear3 = -0.5, -0.7, 0.65, -0.1, 0.0, 1.0, 0		
 	bulkheadProfiles = size1
 
 	CoLOffset = 0, 0.3, -0.3
