--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Skid.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Skid.cfg
@@ -15,8 +15,8 @@ PART
 	
 	scale = 1.0
 	rescaleFactor = 1.0
-	
-	node_attach = 0.00, 0.00, 0.00, 0.0, 0.0, 1.0, 1
+	node_stack_top = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 0	
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 1
 	TechRequired = aerodynamicSystems
 	entryCost = 1800
 	cost = 350
@@ -25,7 +25,7 @@ PART
 	title = L-04 "Crap" Landing Skid
 	manufacturer = Knes
 	description = High performance retractable landing skid. If we didn't tell you, you'd never know that most of those components were salvaged from scrapped machinery... oh.
-	attachRules = 0,1,0,0,1
+	attachRules = 1,1,1,1,1,0,0,0	
 	mass = 0.005
 	minimumRBMass = 0.005	
 	thermalMassModifier = 4.0 
@@ -36,9 +36,9 @@ PART
 	minimum_drag = 0.2
 	angularDrag = 1
 	maxTemp = 3500 
-	crashTolerance = 90
-	breakingForce = 250
-	breakingTorque = 250
+	crashTolerance = 150
+	breakingForce = 1000
+	breakingTorque = 1000
 	bulkheadProfiles = srf
 	tags = StarWatcher StarRider IXV Knes aero (air aircraft ground plane retract roll takeoff taxi wheel
 
@@ -53,5 +53,24 @@ PART
 			endEventGUIName = Retract
 			actionGUIName = Toggle Skid
 		}
+    MODULE
+    {
+        name = ModulePhysicMaterial
+        activePhysicMaterialName = knes_no_friction
+        PhysicMaterialName = knes_no_friction
 
+        PHYSICMATERIALCOLORS
+        {
+            MATERIALCOLOR
+            {
+                name = knes_no_friction
+                color = 1,1,1
+            }
+        }
+    }
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 80
+	}	
 }
