--- a/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
+++ b/GameData/Knes/Parts/LiftingsBodies/StarRider/_Knes_Pod_StarRider.cfg
@@ -23,7 +23,10 @@ PART
 // --- node definitions ---
 // definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
 	node_stack_bottom = 0.0, -1.31824, 0.0, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, 1.88403, 0.0, 0.0, 1.0, 0.0, 1	
+	node_stack_top = 0.0, 1.88403, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_gear1 = 0.0, 0.75, 0.48, 0.0, 0.18, 1.0, 0	
+	node_stack_gear2 = 0.42, -0.7, 0.6, 0.1, 0.0, 1.0, 0	
+	node_stack_gear3 = -0.42, -0.7, 0.6, -0.1, 0.0, 1.0, 0		
 	bulkheadProfiles = size1
 	CoLOffset = 0, -0.3, 0.2
 	CoPOffset = 0, -0.2, 0.2
