Preventing spurious warnings on some (currently empty) config files.

--- a/GameData/Knes/Compatibility/Tweakscale/000_CleanUp.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/000_CleanUp.cfg
@@ -4,9 +4,11 @@
 //
 
 // Place holder
+@PART[this-thing-does-not-exist] { } // To supress a warning on the KSP.log
 
 // template
 //@PART[some-part]:BEFORE[Knes]
 //{
 //	-MODULE[TweakScale],* { }
 //}
+
