TweakScale patches for the new ATV parts

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-ATV_TweakScale.cfg
@@ -25,6 +25,14 @@
 	}
 }
 
+new @PART[_Knes_STEAM_09375_cargo]:NEEDS[TweakScale]:FOR[Knes] // Nano "Minos" Pressurised Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.9375
+	}
+}
 
 @PART[_Knes_STEAM_125_Cargo]:NEEDS[TweakScale]:FOR[Knes] // Small "MiraGino" Pressurised Module
 {
@@ -79,10 +87,31 @@
 	}
 }
 
+new @PART[_Knes_STEAM_Power_Module]:NEEDS[TweakScale]:FOR[Knes] // STEAM "Vesta" Power Module. Rechargeable Battery Bank
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
 
 // ** Pods **
 
 @PART[_Knes_ATV_Adapter]:NEEDS[TweakScale]:FOR[Knes] // ATV "Lemaitre" Nose Adapter
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+
+// ** Propulsion **
+
+new @PART[_Knes_STEAM_Cargo_Tank]:NEEDS[TweakScale]:FOR[Knes] // STEAM "Blamont" Monopropellant Module
 {
 	%MODULE[TweakScale]
 	{
@@ -143,5 +172,14 @@
 	{
 		type = stack_square
 		defaultScale = 1.25
+	}
+}
+
+@PART[_Knes_STEAM_Node]:NEEDS[TweakScale]:FOR[Knes] // STEAM "Caravelle" Node Module
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
 	}
 }
