Reorganizing ATV patches for TweakScale (easier maintenance)

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Core_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Core_TweakScale.cfg
@@ -14,77 +14,7 @@
 // ** Knes :: Core **
 //
 
-// ** Adapters *
-
-@PART[Knes_MultiPayload_Adapter_Sylda_AR5_375]:NEEDS[TweakScale]:FOR[Knes] // Dual Payload Adapter K-375 "Kylda"
-{
-	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 2.5
-	}
-}
-
-@PART[Knes_Structural_Guepiere]:NEEDS[TweakScale]:FOR[Knes] // Guepiere Tri-Coupler
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 1.875
-	}
-}
-
-@PART[Knes_Structural_Kylda]:NEEDS[TweakScale]:FOR[Knes] // Payload Adapter K-250 "Kylda"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 2.5
-	}
-}
-
-@PART[Knes_Structural_Kylda_0625]:NEEDS[TweakScale]:FOR[Knes] // Payload Adapter K-0625 "Kylda"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 0.625
-	}
-}
-
-@PART[Knes_Structural_Kylda_125]:NEEDS[TweakScale]:FOR[Knes] // Payload Adapter K-125 "Kylda"
-{
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 2.5
-	}
-}
-
-@PART[Knes_Utility_SafeSystem]:NEEDS[TweakScale]:FOR[Knes] // SafeSystem 1.875 / 2.5 Abort Adapter
-{
-	// This thing is also an Decouler, but we can't shove two behaviours on the same part!
-	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 1.875
-	}
-}
-
-@PART[Knes_Utility_SafeSystem_1875]:NEEDS[TweakScale]:FOR[Knes] // SafeSystem 1.875 / 1.25 Abort Adapter
-{
-	// This thing is also an Decouler, but we can't shove two behaviours on the same part!
-	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack
-		defaultScale = 3.75
-	}
-}
-
-// ** Antenna *
+// ** Communication **
 
 @PART[_Knes_DirectAntenna_bread]:NEEDS[TweakScale]:FOR[Knes] // C-2501 "Wall-e" Direct Antenna
 {
@@ -94,7 +24,8 @@
 	}
 }
 
-// ** Decouplers *
+
+// ** Coupling **
 
 @PART[Knes_Decoupler_G0625]:NEEDS[TweakScale]:FOR[Knes] // Decoupler G0625
 {
@@ -184,7 +115,21 @@
 	}
 }
 
-// ** Fairings *
+
+// ** Electrical **
+
+@PART[_Knes_Flat_SolarPanel_NanoSat]:NEEDS[TweakScale]:FOR[Knes] // K2 "Shramp" SolarPanel
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+
+// ** Payload **
+
+// Fairings
 // do not work yet (uncomment to test)
 
 //@PART[Knes_Aero_Fairing_09375]:NEEDS[TweakScale]:FOR[Knes] // Knes Fairing (0.9375m)
@@ -232,33 +177,8 @@
 //	}
 //}
 
-// ** Parachute *
 
-@PART[Knes_Paraglider_Steerable_srf]:NEEDS[TweakScale]:FOR[Knes] // Steerable Paraglider "Arcas"
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-@PART[Knes_Paraglider_srf]:NEEDS[TweakScale]:FOR[Knes] // Paraglider "Icarus"
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
-
-// ** Sat *
-
-@PART[_Knes_Flat_SolarPanel_NanoSat]:NEEDS[TweakScale]:FOR[Knes] // K2 "Shramp" SolarPanel
-{
-	%MODULE[TweakScale]
-	{
-		type = free_square
-	}
-}
+// ** Pods **
 
 @PART[_Knes_Sat_Asterix]:NEEDS[TweakScale]:FOR[Knes] // A1 "Zebulon" Probe
 {
@@ -284,5 +204,95 @@
 	{
 		type = stack
 		defaultScale = 0.625
+	}
+}
+
+
+// ** Structural **
+
+@PART[Knes_MultiPayload_Adapter_Sylda_AR5_375]:NEEDS[TweakScale]:FOR[Knes] // Dual Payload Adapter K-375 "Kylda"
+{
+	#@TWEAKSCALEBEHAVIOR[Decoupler]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[Knes_Structural_Guepiere]:NEEDS[TweakScale]:FOR[Knes] // Guepiere Tri-Coupler
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
+	}
+}
+
+@PART[Knes_Structural_Kylda]:NEEDS[TweakScale]:FOR[Knes] // Payload Adapter K-250 "Kylda"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[Knes_Structural_Kylda_0625]:NEEDS[TweakScale]:FOR[Knes] // Payload Adapter K-0625 "Kylda"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 0.625
+	}
+}
+
+@PART[Knes_Structural_Kylda_125]:NEEDS[TweakScale]:FOR[Knes] // Payload Adapter K-125 "Kylda"
+{
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+
+// ** Utility **
+
+@PART[Knes_Paraglider_srf]:NEEDS[TweakScale]:FOR[Knes] // Paraglider "Icarus"
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[Knes_Paraglider_Steerable_srf]:NEEDS[TweakScale]:FOR[Knes] // Steerable Paraglider "Arcas"
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
+@PART[Knes_Utility_SafeSystem]:NEEDS[TweakScale]:FOR[Knes] // SafeSystem 1.875 / 2.5 Abort Adapter
+{
+	// This thing is also an Decouler, but we can't shove two behaviours on the same part!
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 2.5
+	}
+}
+
+@PART[Knes_Utility_SafeSystem_1875]:NEEDS[TweakScale]:FOR[Knes] // SafeSystem 1.875 / 1.25 Abort Adapter
+{
+	// This thing is also an Decouler, but we can't shove two behaviours on the same part!
+	#@TWEAKSCALEBEHAVIOR[SRB]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack
+		defaultScale = 1.875
 	}
 }
