TweakScale patches for the new Core parts

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Core_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Core_TweakScale.cfg
@@ -259,6 +259,14 @@
 
 // ** Utility **
 
+@PART[Knes_Mainchute_srf]:NEEDS[TweakScale]:FOR[Knes] // MainChute "Vega"
+{
+	%MODULE[TweakScale]
+	{
+		type = free_square
+	}
+}
+
 @PART[Knes_Paraglider_srf]:NEEDS[TweakScale]:FOR[Knes] // Paraglider "Icarus"
 {
 	%MODULE[TweakScale]
@@ -282,7 +290,7 @@
 	%MODULE[TweakScale]
 	{
 		type = stack
-		defaultScale = 2.5
+		defaultScale = 1.875
 	}
 }
 
