--- a/GameData/Knes/Compatibility/Tweakscale/Knes-Legacy_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-Legacy_TweakScale.cfg
@@ -15,3 +15,4 @@
 //
 
 // Place holder - this will be filled up as parts are deprecated.
+@PART[this-thing-does-not-exist] { } // To supress a warning on the KSP.log
