Reorganizing ATV patches for TweakScale (easier maintenance)

--- a/GameData/Knes/Compatibility/Tweakscale/Knes-LiftingBodies_TweakScale.cfg
+++ b/GameData/Knes/Compatibility/Tweakscale/Knes-LiftingBodies_TweakScale.cfg
@@ -14,17 +14,7 @@
 // ** Knes :: Lifting Bodies **
 //
 
-// ** Star Rider **
-
-@PART[Knes_Command_K-IXV]:NEEDS[TweakScale]:FOR[Knes] //K-IXV "StarRider" Command Pod
-{
-	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
-	%MODULE[TweakScale]
-	{
-		type = stack_square
-		defaultScale = 1.25
-	}
-}
+// ** Aero **
 
 @PART[Knes_IXV_Elevon]:NEEDS[TweakScale]:FOR[Knes] // Elevon for IXV "Patin"
 {
@@ -33,6 +23,9 @@
 		type = free_square
 	}
 }
+
+
+// ** Ground **
 
 @PART[_Knes_Skid]:NEEDS[TweakScale]:FOR[Knes] // L-04 "Crap" Landing Skid
 {
@@ -43,7 +36,7 @@
 }
 
 
-// ** Star Matcher **
+// ** Pods **
 
 @PART[Knes_Command_K-CEV]:NEEDS[TweakScale]:FOR[Knes] // K-CEV "StarWatcher" Command Pod
 {
@@ -54,3 +47,12 @@
 	}
 }
 
+@PART[Knes_Command_K-IXV]:NEEDS[TweakScale]:FOR[Knes] // K-IXV "StarRider" Command Pod
+{
+	#@TWEAKSCALEBEHAVIOR[Engine]/MODULE[TweakScale] { }
+	%MODULE[TweakScale]
+	{
+		type = stack_square
+		defaultScale = 1.25
+	}
+}
